initial project version

--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,28 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/ionicons/dist/css/ionicons.css",
+              "node_modules/admin-lte/dist/css/AdminLTE.css",
+              "node_modules/admin-lte/dist/css/skins/skin-blue.css",
+              "node_modules/admin-lte/plugins/iCheck/square/blue.css",
+              "node_modules/bootstrap-fileinput/css/fileinput.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/bootstrap/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/admin-lte/dist/js/app.min.js",
+              "node_modules/admin-lte/plugins/iCheck/icheck.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
+              "node_modules/bootstrap-fileinput/js/fileinput.js",
+              "node_modules/bootstrap-fileinput/js/locales/zh.js"
+            ]
           },
           "configurations": {
             "production": {
