--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/bootstrap-fileinput": "0.0.7",
+    "@types/datatables.net": "^1.10.13",
     "admin-lte": "^2.3.11",
     "bootstrap": "^3.3.7",
     "bootstrap-fileinput": "^4.4.8",
