--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -1,5 +1,10 @@
 {
-  "/api": {
-    "target": "http://localhost:8080"
+  "/EzaRest": {
+    "target": "http://192.168.3.37:8080",
+    "secure": false
+  },
+  "/grwj": {
+    "target": "http://192.168.3.37:8080",
+    "secure": false
   }
 }
