--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "ionicons": "^4.2.4",
     "jquery": "^3.3.1",
+    "ngx-bootstrap": "^3.0.1",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.0.0",
     "rxjs": "^6.0.0",
