--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.0.0",
     "rxjs": "^6.0.0",
+    "ws": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.4",
     "@types/node": "~8.9.4",
+    "@types/ws": "^6.0.0",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
