--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "core-js": "^2.5.4",
     "echarts": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "hapi": "^17.5.4",
+    "hapi-pino": "^5.1.0",
     "ionicons": "^4.2.4",
     "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
