--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "admin-lte": "^2.3.11",
     "bootstrap": "^3.3.7",
     "bootstrap-fileinput": "^4.5.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "echarts": "^4.1.0",
     "font-awesome": "^4.7.0",
@@ -32,6 +33,7 @@
     "ionicons": "^4.2.4",
     "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
+    "web-animations-js": "^2.3.1",
     "ws": "^6.0.0",
     "zone.js": "^0.8.26"
   },
